--- a/sass/home.scss
+++ b/sass/home.scss
@@ -331,7 +331,7 @@ footer {
     bottom: 0;
     margin-top: 5%;
     width: 100%;
-    height: 10%;
+    height: 15%;
     background-color: $cd-primary;
     color: $cd-text;
     display: flex;
